Experience section updated

--- a/index.html
+++ b/index.html
@@ -173,26 +173,59 @@
         <!-- Experience Section -->
         <section id="experience" class="py-20 md:py-32 max-w-4xl mx-auto">
             <h2 class="section-title scroll-parallax">Experience</h2>
-            <div class="animated-element max-w-3xl mx-auto space-y-12 relative">
+            <div class="animated-element max-w-3xl mx-auto space-y-4 relative">
                 <div class="absolute left-3 top-3 bottom-3 w-0.5 bg-slate-200 dark:bg-slate-700"></div>
-                <div class="relative pl-10">
+                
+                <!-- Experience Item 1 -->
+                <div class="experience-item group">
                     <div class="timeline-dot"></div>
                     <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2025</p>
-                    <h3 class="text-xl font-bold">Data Analyst - SOHO VFX</h3>
-                    <ul class="mt-2 space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                        <li>Optimized SQL queries, cutting render delays by 30%.</li>
-                        <li>Developed Tableau/Power BI dashboards for performance tracking.</li>
-                        <li>Conducted A/B tests with Python (pandas, numpy).</li>
+                    <h3 class="text-xl font-bold">Data Analyst</h3>
+                    <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                    <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                        <li>Optimized SQL queries for VFX shot telemetry, reducing render queue latency by 30%.</li>
+                        <li>Cleaned and optimized VFX asset metadata with SQL, ensuring data integrity for 65+ artists and supervisors.</li>
+                        <li>Architected and deployed Tableau/Power BI dashboards for real-time visualization of render farm performance and project timelines.</li>
+                        <li>Utilized Python (Pandas, NumPy) for advanced analysis of frame rendering metrics and A/B testing on pipeline tools.</li>
+                        <li>Identified and diagnosed bottlenecks in VFX workflows via data trends, proposing data-driven solutions to enhance production efficiency.</li>
+                        <li>Articulated analytical insights to non-technical VFX supervisors, improving shot approval efficiency.</li>
+                        <li>Collaborated with Pipeline TDs to enhance ETL processes, cutting asset processing time to 20 minutes.</li>
                     </ul>
                 </div>
-                <div class="relative pl-10">
+
+                <!-- Experience Item 2 -->
+                <div class="experience-item group">
+                    <div class="timeline-dot"></div>
+                    <p class="text-sm text-slate-500 dark:text-slate-400">2020 - 2022</p>
+                    <h3 class="text-xl font-bold">Project Coordinator / Data Analyst (Freelance)</h3>
+                    <p class="font-semibold text-slate-700 dark:text-slate-300">Jellysmack & Retail Ecommerce Ventures <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                    <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                        <li>Performance Analytics & Reporting: Executed comprehensive performance analytics on digital content and e-commerce campaigns, delivering data-driven reports to guide strategic adjustments.</li>
+                        <li>Project Leadership & Data Integration: Spearheaded diverse projects, integrating data analytics to inform strategic decision-making and optimize outcomes for digital content (Jellysmack) and e-commerce (REV).</li>
+                        <li>Advanced Data Visualization: Designed and implemented interactive dashboards using Tableau, transforming complex datasets into clear, actionable visual insights for key stakeholders.</li>
+                        <li>SQL-Driven Data Management: Leveraged advanced SQL for robust data extraction, transformation, and analysis, supporting critical initiatives in content optimization and retail operations.</li>
+                        <li>Python for Analytical Solutions: Developed Python-based tools for data processing, automation, and custom analytics, enhancing efficiency in project tracking and insight generation.</li>
+                        <li>Cloud Data Infrastructure Coordination: Applied AWS cloud computing knowledge to coordinate projects involving scalable data storage and processing solutions, ensuring robust data pipelines.</li>
+                        <li>Data-Driven Process Optimization: Identified operational inefficiencies through data analysis, proposing and implementing process improvements that streamlined workflows across content and e-commerce domains.</li>
+                        <li>Cross-functional Data Communication: Facilitated data-driven discussions and presented analytical findings to diverse teams, fostering a data-informed culture and ensuring alignment on project performance.</li>
+                    </ul>
+                </div>
+                
+                <!-- Experience Item 3 -->
+                <div class="experience-item group">
                     <div class="timeline-dot"></div>
                     <p class="text-sm text-slate-500 dark:text-slate-400">2014 - 2019</p>
-                    <h3 class="text-xl font-bold">PMO Analyst | Data Analyst - Cognizant</h3>
-                    <ul class="mt-2 space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                        <li>Enhanced Healthnet queries with SQL, reducing times by 20%.</li>
-                        <li>Built Python tools for patient insights.</li>
-                        <li>Ensured 90% IT uptime.</li>
+                    <h3 class="text-xl font-bold">PMO Analyst / Data Analyst</h3>
+                    <p class="font-semibold text-slate-700 dark:text-slate-300">Cognizant <span class="font-normal text-slate-500 dark:text-slate-400">| Bengaluru, India</span></p>
+                    <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                        <li>Provided Level 2 application support, resolving incidents via ServiceNow and leveraging SQL for data-driven enhancements.</li>
+                        <li>Developed and maintained comprehensive technical documentation (MSR, PMR, QSR), reducing ticket resolution time by 20%.</li>
+                        <li>Conducted BI tool (Tableau/Power BI) training for 500+ client users, enabling self-service data insights.</li>
+                        <li>Managed critical IT infrastructure and security, ensuring 99% system uptime and ISO 27001 compliance through cross-functional collaboration.</li>
+                        <li>Performed rigorous software quality assurance using SOPs, test cases, and automation frameworks.</li>
+                        <li>Analyzed Healthnet user data with advanced SQL, reducing query times by 20%, and resolved complex code/performance issues.</li>
+                        <li>Designed and maintained scalable Python backend services for real-time messaging, and developed analytics tools for patient behavior insights.</li>
+                        <li>Monitored SOP compliance, tracked project progress, conducted root cause analyses, and proposed process optimizations.</li>
                     </ul>
                 </div>
             </div>
@@ -318,10 +351,20 @@
                     '.skill-icon': { '@apply h-6 w-6 text-slate-600 dark:text-slate-400 flex-shrink-0': {} },
                     '.skill-category-title': { '@apply text-lg font-semibold text-center mb-4 text-slate-600 dark:text-slate-400': {}, },
                     '.cta-button': { '@apply inline-block bg-slate-800 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-slate-950 dark:bg-slate-200 dark:text-slate-900 dark:hover:bg-white transition-all duration-300 transform hover:scale-105 shadow-lg': {}, },
-                    '.timeline-dot': { '@apply absolute left-0 top-2 h-5 w-5 rounded-full bg-slate-500 border-4 border-white dark:border-slate-950': {}, },
+                    '.timeline-dot': { '@apply absolute left-0 top-2 h-5 w-5 rounded-full bg-slate-500 border-4 border-white dark:border-slate-950 group-hover:bg-slate-800 dark:group-hover:bg-slate-200 transition-colors duration-300': {}, },
                     '.contact-item': { '@apply flex items-center text-slate-600 dark:text-slate-400 hover:text-slate-900 dark:hover:text-slate-100 font-medium transition-colors': {} },
                     '.client-logo': { '@apply h-7 sm:h-8 object-contain max-w-[8rem] sm:max-w-[10rem] filter grayscale opacity-70 transition-all duration-300 hover:grayscale-0 hover:opacity-100': {} },
-                    '.stat-item': { '@apply transition-all duration-300 hover:scale-110': {} }
+                    '.stat-item': { '@apply transition-all duration-300 hover:scale-110': {} },
+                    /* Styles for Experience Section Hover Effect */
+                    '.experience-item': { 
+                        '@apply cursor-pointer transition-colors duration-300 rounded-lg -m-4 p-4': {},
+                    },
+                    '.experience-details': { 
+                        '@apply max-h-0 overflow-hidden opacity-0 transition-all duration-700 ease-in-out mt-0': {},
+                    },
+                    '.experience-item:hover .experience-details': { 
+                        '@apply max-h-[500px] opacity-100 mt-3': {} 
+                    },
                 })
             }
         ]
