--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
                         <h3 class="text-xl font-bold">Project Coordinator / Data Analyst (Freelance)</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Jellysmack & Retail Ecommerce Ventures <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Performance Analytics & Reporting: Executed comprehensive performance analytics on digital content and e-commerce campaigns, delivering data-driven reports to guide strategic adjustments.</li>
-                            <li>Project Leadership & Data Integration: Spearheaded diverse projects, integrating data analytics to inform strategic decision-making and optimize outcomes for digital content (Jellysmack) and e-commerce (REV).</li>
-                            <li>Advanced Data Visualization: Designed and implemented interactive dashboards using Tableau, transforming complex datasets into clear, actionable visual insights for key stakeholders.</li>
-                            <li>SQL-Driven Data Management: Leveraged advanced SQL for robust data extraction, transformation, and analysis, supporting critical initiatives in content optimization and retail operations.</li>
-                            <li>Python for Analytical Solutions: Developed Python-based tools for data processing, automation, and custom analytics, enhancing efficiency in project tracking and insight generation.</li>
-                            <li>Cloud Data Infrastructure Coordination: Applied AWS cloud computing knowledge to coordinate projects involving scalable data storage and processing solutions, ensuring robust data pipelines.</li>
-                            <li>Data-Driven Process Optimization: Identified operational inefficiencies through data analysis, proposing and implementing process improvements that streamlined workflows across content and e-commerce domains.</li>
-                            <li>Cross-functional Data Communication: Facilitated data-driven discussions and presented analytical findings to diverse teams, fostering a data-informed culture and ensuring alignment on project performance.</li>
+                            <li>Performance Analytics & Reporting: Conducted performance analytics on campaigns, delivering data-driven reports for strategic adjustments.</li>
+                            <li>Advanced Data Visualization: Designed Tableau dashboards, transforming complex data into actionable visual insights.</li>
+                            <li>SQL-Driven Data Management: Utilized advanced SQL for data extraction, transformation, and analysis, supporting key initiatives.</li>
+                            <li>Project Leadership & Data Integration: Led projects, integrating data analytics for strategic decision-making in digital content and e-commerce.</li>
+                            <li>Python for Analytical Solutions: Developed Python tools for data processing, automation, and custom analytics.</li>
+                            <li>Cloud Data Infrastructure Coordination: Applied AWS knowledge to coordinate scalable data storage and processing solutions.</li>
+                            <li>Data-Driven Process Optimization: Identified inefficiencies via data analysis, proposing and implementing process improvements.</li>
+                            <li>Cross-functional Data Communication: Presented analytical findings to diverse teams, fostering a data-informed culture.</li>
                         </ul>
                     </div>
                 </div>
@@ -223,14 +223,14 @@
                         <h3 class="text-xl font-bold">PMO Analyst / Data Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Cognizant <span class="font-normal text-slate-500 dark:text-slate-400">| Bengaluru, India</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Provided Level 2 application support, resolving incidents via ServiceNow and leveraging SQL for data-driven enhancements.</li>
-                            <li>Developed and maintained comprehensive technical documentation (MSR, PMR, QSR), reducing ticket resolution time by 20%.</li>
-                            <li>Conducted BI tool (Tableau/Power BI) training for 500+ client users, enabling self-service data insights.</li>
-                            <li>Managed critical IT infrastructure and security, ensuring 99% system uptime and ISO 27001 compliance through cross-functional collaboration.</li>
-                            <li>Performed rigorous software quality assurance using SOPs, test cases, and automation frameworks.</li>
-                            <li>Analyzed Healthnet user data with advanced SQL, reducing query times by 20%, and resolved complex code/performance issues.</li>
-                            <li>Designed and maintained scalable Python backend services for real-time messaging, and developed analytics tools for patient behavior insights.</li>
-                            <li>Monitored SOP compliance, tracked project progress, conducted root cause analyses, and proposed process optimizations.</li>
+                            <li>Provided Tier 2 application support, leveraging SQL for data-driven system enhancements and incident resolution via ServiceNow.</li>
+                            <li>Developed comprehensive technical documentation, reducing ticket resolution time by 20% and enhancing troubleshooting efficiency.</li>
+                            <li>Delivered BI tool (Tableau/Power BI) training to 500+ client users, enabling self-service data insights from Healthnet user data.</li>
+                            <li>Managed critical IT infrastructure with cross-functional teams, ensuring 99% system uptime and ISO 27001 compliance.</li>
+                            <li>Performed rigorous software quality assurance using SOPs, test cases, and automation, while resolving complex code and performance issues.</li>
+                            <li>Analyzed Healthnet user data with advanced SQL (JOINs, GROUP BY, window functions), reducing query times by 20%.</li>
+                            <li>Designed and maintained scalable Python backend services for real-time messaging and developed analytics tools for patient behavior insights.</li>
+                            <li>Monitored SOP compliance and project progress, conducting root cause analyses and proposing process optimizations.</li>
                         </ul>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                     '.tech-badge': { '@apply inline-block bg-slate-100 text-slate-700 dark:bg-slate-800 dark:text-slate-300 text-xs font-semibold px-2.5 py-1 rounded-full': {}, },
                     '.skill-badge-container': { '@apply flex flex-wrap justify-center items-center gap-x-10 gap-y-6': {}, },
                     '.skill-item': { '@apply flex items-center gap-3 transition-transform duration-300 hover:scale-105': {} },
-                    '.skill-icon': { '@apply h-8 w-8 text-slate-600 dark:text-slate-400 flex-shrink-0': {} },
+                    '.skill-icon': { '@apply h-7 w-7 text-slate-600 dark:text-slate-400 flex-shrink-0': {} },
                     '.skill-category-title': { '@apply text-lg font-semibold text-center mb-6 text-slate-600 dark:text-slate-400': {}, },
                     '.cta-button': { '@apply inline-block bg-slate-800 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-slate-950 dark:bg-slate-200 dark:text-slate-900 dark:hover:bg-white transition-all duration-300 transform hover:scale-105 shadow-lg': {}, },
                     '.timeline-dot': { '@apply absolute left-3 -translate-x-1/2 top-0 h-5 w-5 rounded-full bg-slate-500 border-4 border-white dark:border-slate-950 group-hover:bg-slate-800 dark:group-hover:bg-slate-200 transition-colors duration-300 mt-1': {}, },
