--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
             <!-- Stats Block -->
             <div class="hidden lg:flex flex-col gap-8 fixed top-1/2 -translate-y-1/2 right-5 lg:right-8 z-50">
                 <div class="stat-item text-right">
-                    <p class="text-2xl font-bold text-slate-900 dark:text-white">4+</p>
+                    <p class="text-xl font-bold text-slate-900 dark:text-white">4+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Years of Experience</p>
                 </div>
                  <div class="stat-item text-right">
-                    <p class="text-2xl font-bold text-slate-900 dark:text-white">12+</p>
+                    <p class="text-xl font-bold text-slate-900 dark:text-white">12+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Completed Projects</p>
                 </div>
                  <div class="stat-item text-right">
-                    <p class="text-2xl font-bold text-slate-900 dark:text-white">10K+</p>
+                    <p class="text-xl font-bold text-slate-900 dark:text-white">10K+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Hours Worked</p>
                 </div>
             </div>
