--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
                 <div>
                     <h3 class="text-xl font-bold">Certifications</h3>
                     <ul class="mt-2 space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                        <li>AWS Certified Solutions Architect - Associate</li>
-                        <li>Tableau Certified Data Analyst</li>
-                        <li>Fundamentals of AI by IBM</li>
                         <li>Google Data Analytics Professional Certificate</li>
+                        <li>Tableau Certified Data Analyst</li>
+                        <li>Fundamentals of Artificial intelligence & Machine Learning by IBM</li>
+                        <li>AWS Certified Solutions Architect - Associate</li>
                     </ul>
                 </div>
             </div>
