--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 
                 <div class="animated-element mt-12 max-w-3xl mx-auto text-center leading-relaxed text-slate-700 dark:text-slate-300">
                      <p>
-                        I am a detail-oriented Data analyst with a passion for uncovering the stories hidden within data. My expertise lies in cleaning, transforming, and visualizing complex datasets to drive data-informed decision-making. With a strong background in SQL, Python, and data visualization tools like Tableau and Power BI, I excel at turning raw numbers into clear, actionable insights.
+                        I am a detail-oriented Data Analyst with a passion for uncovering the stories hidden within data. My expertise lies in cleaning, transforming, and visualizing complex datasets to drive data-informed decision-making. With a strong background in SQL, Python, and data visualization tools like Tableau and Power BI, I excel at turning raw numbers into clear, actionable insights.
                     </p>
                 </div>
             </div>
@@ -225,10 +225,10 @@
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
                             <li>Provided Tier 2 application support, leveraging SQL for data-driven system enhancements and incident resolution via ServiceNow.</li>
                             <li>Developed comprehensive technical documentation, reducing ticket resolution time by 20% and enhancing troubleshooting efficiency.</li>
-                            <li>Delivered BI tool (Tableau/Power BI) training to 500+ client users, enabling self-service data insights from Healthnet user data.</li>
+                            <li>Delivered BI tool (Tableau/Power BI) training to 500+ client users, enabling self-service data insights from Health Net user data.</li>
                             <li>Managed critical IT infrastructure with cross-functional teams, ensuring 99% system uptime and ISO 27001 compliance.</li>
                             <li>Performed rigorous software quality assurance using SOPs, test cases, and automation, while resolving complex code and performance issues.</li>
-                            <li>Analyzed Healthnet user data with advanced SQL (JOINs, GROUP BY, window functions), reducing query times by 20%.</li>
+                            <li>Analyzed Health Net user data with advanced SQL (JOINs, GROUP BY, window functions), reducing query times by 20%.</li>
                             <li>Designed and maintained scalable Python backend services for real-time messaging and developed analytics tools for patient behavior insights.</li>
                             <li>Monitored SOP compliance and project progress, conducting root cause analyses and proposing process optimizations.</li>
                         </ul>
@@ -282,7 +282,7 @@
                     <ul class="mt-2 space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
                         <li>Google Data Analytics Professional Certificate</li>
                         <li>Tableau Certified Data Analyst</li>
-                        <li>Fundamentals of Artificial intelligence & Machine Learning by IBM</li>
+                        <li>Fundamentals of Artificial Intelligence and Machine Learning by IBM</li>
                         <li>AWS Certified Solutions Architect - Associate</li>
                     </ul>
                 </div>
