--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </p>
                     <div class="mt-8 flex justify-center space-x-6">
                         <a href="https://www.linkedin.com/in/varunkammanni/" target="_blank" class="social-icon"><i class="fab fa-linkedin fa-2x"></i></a>
-                        <a href="https://github.com/varunkammanni" target="_blank" class="social-icon"><i class="fab fa-github fa-2x"></i></a>
+                        <a href="https://github.com/varunkammanni/DA-2024-25/tree/main/python" target="_blank" class="social-icon"><i class="fab fa-github fa-2x"></i></a>
                         <a href="mailto:varunkammanni@gmail.com" class="social-icon"><i class="fas fa-envelope fa-2x"></i></a>
                     </div>
                 </div>
