--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -219,23 +218,35 @@
                     </div>
                 </div>
 
-                <!-- Experience Item 2 -->
+                <!-- Experience Item 2 -- UPDATED -->
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
                         <p class="text-sm text-slate-500 dark:text-slate-400">2020 - 2022</p>
                         <h3 class="text-xl font-bold">Project Coordinator / Data Analyst (Freelance)</h3>
-                        <p class="font-semibold text-slate-700 dark:text-slate-300">Jellysmack & Retail Ecommerce Ventures <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
-                        <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Performance Analytics & Reporting: Conducted performance analytics on campaigns, delivering data-driven reports for strategic adjustments.</li>
-                            <li>Advanced Data Visualization: Designed Tableau dashboards, transforming complex data into actionable visual insights.</li>
-                            <li>SQL-Driven Data Management: Utilized advanced SQL for data extraction, transformation, and analysis, supporting key initiatives.</li>
-                            <li>Project Leadership & Data Integration: Led projects, integrating data analytics for strategic decision-making in digital content and e-commerce.</li>
-                            <li>Python for Analytical Solutions: Developed Python tools for data processing, automation, and custom analytics.</li>
-                            <li>Cloud Data Infrastructure Coordination: Applied AWS knowledge to coordinate scalable data storage and processing solutions.</li>
-                            <li>Data-Driven Process Optimization: Identified inefficiencies via data analysis, proposing and implementing process improvements.</li>
-                            <li>Cross-functional Data Communication: Presented analytical findings to diverse teams, fostering a data-informed culture.</li>
-                        </ul>
+                        
+                        <!-- Jellysmack Details -->
+                        <div class="mt-4">
+                            <p class="font-semibold text-slate-700 dark:text-slate-300">Jellysmack <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                            <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                                <li>Executed A/B testing using proprietary tools and Facebook Ads Manager to optimize video content.</li>
+                                <li>Analyzed KPIs (CTR, watch time, MSI) via Facebook Insights and Google Data Studio for content strategy.</li>
+                                <li>Developed data visualizations (Tableau, Google Data Studio) to present actionable insights to stakeholders.</li>
+                                <li>Utilized AI-driven asset optimization tools to enhance content discoverability on Facebook.</li>
+                                <li>Collaborated cross-functionally to align content with brand goals and ensure data consistency.</li>
+                                <li>Monitored algorithm changes to integrate data insights, maximizing audience reach.</li>
+                            </ul>
+                        </div>
+
+                        <!-- Retail Ecommerce Ventures Details -->
+                        <div class="mt-4">
+                            <p class="font-semibold text-slate-700 dark:text-slate-300">Retail Ecommerce Ventures <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                            <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                                <li>Leveraged digital marketing analytics and A/B testing (Google Analytics, Meta Business Suite) to achieve 3+ ROAS for online ad campaigns.</li>
+                                <li>Conducted in-depth KPI analysis (CTR, engagement rates, conversions) using Hootsuite and native platform analytics to refine video content and maximize performance.</li>
+                                <li>Applied data-driven video SEO techniques, including optimized titles and hashtags, to enhance content discoverability on YouTube and TikTok.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 
@@ -660,4 +671,3 @@
     </script>
 </body>
 </html>
-```
