--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
         <!-- Experience Section -->
         <section id="experience" class="py-20 md:py-32 max-w-4xl mx-auto">
             <h2 class="section-title scroll-parallax">Experience</h2>
-            <div class="animated-element max-w-3xl mx-auto space-y-8 relative">
+            <!-- MODIFIED: Removed max-width and margin utilities to allow full width -->
+            <div class="animated-element space-y-8 relative">
                 <div class="absolute left-3 top-0 bottom-0 w-0.5 bg-slate-200 dark:bg-slate-700 mt-2"></div>
                 
                 <!-- Experience Item 1 -->
@@ -218,7 +219,7 @@
                     </div>
                 </div>
 
-                <!-- Experience Item 2 -- UPDATED -->
+                <!-- Experience Item 2 -->
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
