--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
             <div class="flex items-center justify-between h-16">
                 <!-- Left Aligned Name -->
                 <div class="flex-1">
-                     <a href="#home" class="text-xl font-bold font-['Poppins'] tracking-tight text-white">VK</a>
+                     <a href="#home" class="flex items-center space-x-2 text-xl font-bold font-['Poppins'] tracking-tight text-white">
+                        <span>VK</span>
+                        <!-- Custom Network/Bar Chart Icon -->
+                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                            <rect x="2" y="11" width="5" height="8" rx="1.5"></rect>
+                            <rect x="9" y="6" width="5" height="13" rx="1.5"></rect>
+                            <rect x="16" y="1" width="5" height="18" rx="1.5"></rect>
+                        </svg>
+                     </a>
                 </div>
                 <!-- Center Aligned Nav -->
                 <nav class="hidden md:flex items-center justify-center space-x-6 lg:space-x-8">
