--- a/index.html
+++ b/index.html
@@ -91,12 +91,8 @@
                 <div class="flex-1">
                      <a href="#home" class="flex items-center space-x-2 text-xl font-bold font-['Poppins'] tracking-tight text-white">
                         <span>VK</span>
-                        <!-- Custom Network/Bar Chart Icon -->
-                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <rect x="2" y="11" width="5" height="8" rx="1.5"></rect>
-                            <rect x="9" y="6" width="5" height="13" rx="1.5"></rect>
-                            <rect x="16" y="1" width="5" height="18" rx="1.5"></rect>
-                        </svg>
+                        <!-- VK Logo -->
+                        <img src="/assets/img/VK_Logo.png" alt="VK Logo" class="h-[1em] w-[1em] object-contain align-middle" />
                      </a>
                 </div>
                 <!-- Center Aligned Nav -->
@@ -216,11 +212,11 @@
                         <h3 class="text-xl font-bold">Data Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Optimized SQL queries for VFX shot telemetry, reducing render queue latency by 30%.</li>
-                            <li>Cleaned and optimized VFX asset metadata with SQL, ensuring data integrity for 65+ artists and supervisors.</li>
-                            <li>Architected and deployed Tableau/Power BI dashboards for real-time visualization of render farm performance and project timelines.</li>
-                            <li>Utilized Python (Pandas, NumPy) for advanced analysis of frame rendering metrics and A/B testing on pipeline tools.</li>
-                            <li>Identified and diagnosed bottlenecks in VFX workflows via data trends, proposing data-driven solutions to enhance production efficiency.</li>
+                            <li>Collected, integrated, and analyzed production metadata, asset data, render performance logs, and simulation parameters using SQL, Python (Pandas, NumPy), and Tableau.</li>
+                            <li>Identified production bottlenecks and optimized cross-department VFX workflows, improving throughput and reducing render queue latency by ~15%.</li>
+                            <li>Built predictive analytics models to forecast project timelines, budget utilization, and resource allocation with up to 73% accuracy using machine learning algorithms.</li>
+                            <li>Conducted variance and cost analysis on bid vs. actual project metrics, including render farm utilization, to identify cost optimization opportunities.</li>
+                            <li>Developed and maintained executive dashboards, department-level performance reports, and client-facing analytics for real-time project monitoring.</li>
                             <li>Articulated analytical insights to non-technical VFX supervisors, improving shot approval efficiency.</li>
                             <li>Collaborated with Pipeline TDs to enhance ETL processes, cutting asset processing time to 20 minutes.</li>
                         </ul>
@@ -251,7 +247,7 @@
                         <div class="mt-4">
                             <p class="font-semibold text-slate-700 dark:text-slate-300">Retail Ecommerce Ventures <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                             <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                                <li>Leveraged digital marketing analytics and A/B testing (Google Analytics, Meta Business Suite) to achieve 3+ ROAS for online ad campaigns.</li>
+                                <li>Leveraged digital marketing analytics (Google Analytics, Meta Business Suite) to achieve 3+ ROAS for online ad campaigns.</li>
                                 <li>Conducted in-depth KPI analysis (CTR, engagement rates, conversions) using Hootsuite and native platform analytics to refine video content and maximize performance.</li>
                                 <li>Applied data-driven video SEO techniques, including optimized titles and hashtags, to enhance content discoverability on YouTube and TikTok.</li>
                             </ul>
