--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                      <a href="#home" class="flex items-center space-x-2 text-xl font-bold font-['Poppins'] tracking-tight text-white">
                         <span>VK</span>
                         <!-- VK Logo -->
-                         <img src="/assets/img/VK_Logo_W.png" alt="VK Logo" class="h-8 w-8 sm:h-9 sm:w-9 object-contain align-middle" />
+                         <img src="/assets/img/VK_Logo_W.png" alt="VK Logo" class="h-8 w-10 sm:h-9 sm:w-9 object-contain align-middle mt-0.5" />
                      </a>
                 </div>
                 <!-- Center Aligned Nav -->
