--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <!-- Education Block -->
                 <div class="space-y-6">
                     <div>
-                        <h3 class="text-xl font-bold">Master of Science, Project Management</h3>
+                        <h3 class="text-xl font-bold">Master of Science, Data Analytics</h3>
                         <p class="text-slate-700 dark:text-slate-300">University of West London, London, UK</p>
                         <p class="text-sm text-slate-500 dark:text-slate-400">2018 - 2020</p>
                     </div>
