--- a/index.html
+++ b/index.html
@@ -208,22 +208,36 @@
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
-                        <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2025</p>
+                        <p class="text-sm text-slate-500 dark:text-slate-400">2025 - 2026</p>
                         <h3 class="text-xl font-bold">Data Analyst</h3>
-                        <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                        <p class="font-semibold text-slate-700 dark:text-slate-300">Vosyn Inc. <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Collected, integrated, and analyzed production metadata, asset data, render performance logs, and simulation parameters using SQL, Python (Pandas, NumPy), and Tableau.</li>
-                            <li>Identified production bottlenecks and optimized cross-department VFX workflows, improving throughput and reducing render queue latency by ~15%.</li>
-                            <li>Built predictive analytics models to forecast project timelines, budget utilization, and resource allocation with up to 73% accuracy using machine learning algorithms.</li>
-                            <li>Conducted variance and cost analysis on bid vs. actual project metrics, including render farm utilization, to identify cost optimization opportunities.</li>
-                            <li>Developed and maintained executive dashboards, department-level performance reports, and client-facing analytics for real-time project monitoring.</li>
-                            <li>Articulated analytical insights to non-technical VFX supervisors, improving shot approval efficiency.</li>
-                            <li>Collaborated with Pipeline TDs to enhance ETL processes, cutting asset processing time to 20 minutes.</li>
+                            <li>Analyzed large-scale AI audio/video datasets for VosynCore using SQL and Python to track translation performance (WER, BLEU, QCS), improving model accuracy by 12% and reducing manual review.</li>
+                            <li>Built automated product analytics dashboards monitoring retention, API latency, and feature adoption for VosynVerse.</li>
+                            <li>Developed financial models with operations team tracking MRR/ARR, LTV/CAC, and cloud costs to support executive planning and investor reporting.</li>
+                            <li>Mentored 3 junior analysts and interns on SQL optimization and reporting standards to improve team efficiency.</li>
                         </ul>
                     </div>
                 </div>
 
                 <!-- Experience Item 2 -->
+                <div class="experience-item group relative">
+                    <div class="timeline-dot"></div>
+                    <div class="pl-10">
+                        <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2025</p>
+                        <h3 class="text-xl font-bold">Data Analyst</h3>
+                        <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
+                        <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
+                            <li>Analyzed ShotGrid and production metadata to identify workflow bottlenecks, improving task allocation efficiency and reducing project overspend.</li>
+                            <li>Built automated Tableau and Excel dashboards delivering real-time visibility into project health, artist utilization, and delivery timelines.</li>
+                            <li>Leveraged historical production and render data to forecast workload and resource demand, improving planning accuracy.</li>
+                            <li>Implemented data validation checks across production systems, increasing reporting accuracy and consistency.</li>
+                            <li>Collaborated with pipeline engineers to automate data extraction using Python, reducing manual effort and accelerating executive reporting.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Experience Item 3 -->
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
@@ -234,12 +248,11 @@
                         <div class="mt-4">
                             <p class="font-semibold text-slate-700 dark:text-slate-300">Jellysmack <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                             <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                                <li>Executed A/B testing using proprietary tools and Facebook Ads Manager to optimize video content.</li>
-                                <li>Analyzed KPIs (CTR, watch time, MSI) via Facebook Insights and Google Data Studio for content strategy.</li>
-                                <li>Developed data visualizations (Tableau, Google Data Studio) to present actionable insights to stakeholders.</li>
-                                <li>Utilized AI-driven asset optimization tools to enhance content discoverability on Facebook.</li>
-                                <li>Collaborated cross-functionally to align content with brand goals and ensure data consistency.</li>
-                                <li>Monitored algorithm changes to integrate data insights, maximizing audience reach.</li>
+                                <li>Led 160+ monthly A/B tests on video hooks and metadata within a CRO framework, increasing CTR and boosting 1-minute retention by 15% across creator portfolios.</li>
+                                <li>Used platform analytics (CTR, retention, MSI) to optimize content ROI and strategy, delivering a 30% increase in audience reach for top creators.</li>
+                                <li>Scaled operations by partnering with Creative/Strategy to launch a data feedback loop and 10+ Notion A/B testing playbooks.</li>
+                                <li>Automated KPI tracking via internal tools to scale reporting & operational efficiency.</li>
+                                <li>Built data visualizations on audience growth to guide stakeholder ROI decisions.</li>
                             </ul>
                         </div>
 
@@ -255,7 +268,7 @@
                     </div>
                 </div>
                 
-                <!-- Experience Item 3 -->
+                <!-- Experience Item 4 -->
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
@@ -263,14 +276,10 @@
                         <h3 class="text-xl font-bold">PMO Analyst / Data Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Cognizant <span class="font-normal text-slate-500 dark:text-slate-400">| Bengaluru, India</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
-                            <li>Provided Tier 2 application support, leveraging SQL for data-driven system enhancements and incident resolution via ServiceNow.</li>
-                            <li>Developed comprehensive technical documentation, reducing ticket resolution time by 20% and enhancing troubleshooting efficiency.</li>
-                            <li>Delivered BI tool (Tableau/Power BI) training to 500+ client users, enabling self-service data insights from Health Net user data.</li>
-                            <li>Managed critical IT infrastructure with cross-functional teams, ensuring 99% system uptime and ISO 27001 compliance.</li>
-                            <li>Performed rigorous software quality assurance using SOPs, test cases, and automation, while resolving complex code and performance issues.</li>
-                            <li>Analyzed Health Net user data with advanced SQL (JOINs, GROUP BY, window functions), reducing query times by 20%.</li>
-                            <li>Designed and maintained scalable Python backend services for real-time messaging and developed analytics tools for patient behavior insights.</li>
-                            <li>Monitored SOP compliance and project progress, conducting root cause analyses and proposing process optimizations.</li>
+                            <li>Analyzed incident, request, and change datasets using SQL and Excel, identifying trends that reduced ticket resolution time(high-risk categories) in ServiceNow (SNOW) by ~20% and improved IT support performance.</li>
+                            <li>Built and maintained Tableau and Power BI dashboards tracking KPIs, backlog, and service metrics, delivering real-time visibility to 50+ stakeholders.</li>
+                            <li>Developed executive analytical reports(MSR, PMR and QBR) and RCA documentation to support strategic planning, risk management, and change readiness.</li>
+                            <li>Collaborated with cross-functional teams and client stakeholders (HealthNet & Allegis) to convert operational data into actionable leadership insights.</li>
                         </ul>
                     </div>
                 </div>
