--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="experience-item group relative">
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
-                        <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2025</p>
+                        <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2024</p>
                         <h3 class="text-xl font-bold">Data Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
@@ -315,7 +315,7 @@
                 <!-- Education Block -->
                 <div class="space-y-6">
                     <div>
-                        <h3 class="text-xl font-bold">Master of Science, Data Analytics</h3>
+                        <h3 class="text-xl font-bold">Master of Science, Digital Media</h3>
                         <p class="text-slate-700 dark:text-slate-300">University of West London, London, UK</p>
                         <p class="text-sm text-slate-500 dark:text-slate-400">2018 - 2020</p>
                     </div>
