Update in Description.

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
                         <p class="text-sm text-slate-500 dark:text-slate-400">2022 - 2024</p>
-                        <h3 class="text-xl font-bold">Data Analyst</h3>
+                        <h3 class="text-xl font-bold">Data Operations Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Soho VFX <span class="font-normal text-slate-500 dark:text-slate-400">| Toronto, Canada</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
                             <li>Analyzed ShotGrid and production metadata to identify workflow bottlenecks, improving task allocation efficiency and reducing project overspend.</li>
@@ -242,7 +242,7 @@
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
                         <p class="text-sm text-slate-500 dark:text-slate-400">2020 - 2022</p>
-                        <h3 class="text-xl font-bold">Project Coordinator / Data Analyst (Freelance)</h3>
+                        <h3 class="text-xl font-bold">Reporting & Performance Analyst</h3>
                         
                         <!-- Jellysmack Details -->
                         <div class="mt-4">
@@ -273,7 +273,7 @@
                     <div class="timeline-dot"></div>
                     <div class="pl-10">
                         <p class="text-sm text-slate-500 dark:text-slate-400">2014 - 2018</p>
-                        <h3 class="text-xl font-bold">PMO Analyst / Data Analyst</h3>
+                        <h3 class="text-xl font-bold">PMO | Reporting Analyst</h3>
                         <p class="font-semibold text-slate-700 dark:text-slate-300">Cognizant <span class="font-normal text-slate-500 dark:text-slate-400">| Bengaluru, India</span></p>
                         <ul class="experience-details space-y-2 text-slate-700 dark:text-slate-300 list-disc list-inside">
                             <li>Analyzed incident, request, and change datasets using SQL and Excel, identifying trends that reduced ticket resolution time(high-risk categories) in ServiceNow (SNOW) by ~20% and improved IT support performance.</li>
@@ -315,7 +315,7 @@
                 <!-- Education Block -->
                 <div class="space-y-6">
                     <div>
-                        <h3 class="text-xl font-bold">Master of Science, Digital Media</h3>
+                        <h3 class="text-xl font-bold">MA, Digital Media</h3>
                         <p class="text-slate-700 dark:text-slate-300">University of West London, London, UK</p>
                         <p class="text-sm text-slate-500 dark:text-slate-400">2018 - 2020</p>
                     </div>
